# knowledge-base-search

./: .env.example  .gitignore  .gitmodules  .mcp.json  =1.30.0  AGENTIC_RAG_TEST_PLAN.md  CLAUDE.md  COMPLETE_SUMMARY.md  CURRENT_STATUS.md  E2E_FINAL_REPORT.md  E2E_FINAL_SUMMARY.md  E2E_TESTING_SUMMARY.md  E2E_TEST_VALIDATION.md  E2E_VALIDATION_SUCCESS.md  FINAL_COMPLETION_SUMMARY.md  FINAL_SUMMARY.md  Makefile  PERFORMANCE_RESULTS.md  PROJECT_STATUS.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SIMPLE_E2E_ANALYSIS.md  STATUS.md  TEST_REPORT.md  TODAY_SUMMARY.md  batch_index.py  build_index.py  convert_redis.py  docker-compose.yml  generate_e2e_report.py  generate_report.py  index_redis.py  pyproject.toml  rag_worker.py  simple_rag_worker.py  sonnet_worker.py  test_e2e.py  test_quick_e2e.py  test_quick_hybrid.py  (+6 more)
.plan/: reindex-and-eval.md
docs/: design-review.md  design.md  doc-preprocess-plan.md  dual-layer-architecture.md  dual-repo-architecture.md  e2e-testing.md  eval-review.md  eval-strategy-discussion.md  eval-upgrade-plan.md  progress-2025-02-13.md
eval/: AGENTIC_RAG_TEST_RECORD.md  AGENTIC_VS_SIMPLE_20260214_003716.md  AGENTIC_VS_SIMPLE_20260214_004619.md  AGENTIC_VS_SIMPLE_20260214_005417.md  AGENTIC_VS_SIMPLE_20260214_091614.md  AGENTIC_VS_SIMPLE_20260214_101645.md  AGENTIC_VS_SIMPLE_20260214_132324.md  AGENTIC_VS_SIMPLE_20260214_165616.md  AGENTIC_VS_SIMPLE_20260214_174625.md  AGENTIC_VS_SIMPLE_20260214_193712.md  COMPARISON_REPORT_20260214_001217.md  EVAL_RESULTS.md  SIMPLE_RAG_BASELINE_REPORT.md  agentic_rag_test_20260214_003652.json  agentic_rag_test_20260214_003745.json  agentic_rag_test_20260214_004810.json  (+66 more)
scripts/: doc_preprocess.py  (+14 more)
(+499 files in other folders)
